--- a/.github/workflows/Frontend-app-cd-old.yml
+++ b/.github/workflows/Frontend-app-cd-old.yml
@@ -8,15 +8,13 @@ on:
     paths:
       - 'app/frontend-src/k8s/**'
 
-env:
-  AWS_REGION: ap-south-1
-  AWS_DEFAULT_REGION: ap-south-1
-  ECR_REPOSITORY: ecommerce-frontend
-  EKS_CLUSTER_NAME: ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
-
 jobs:
   deploy-to-eks:
     runs-on: [self-hosted, linux, qa]
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      ECR_REPOSITORY: ecommerce-frontend
+      EKS_CLUSTER_NAME: ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
 
     steps:
       - name: Checkout source
@@ -27,7 +25,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Set up kubeconfig for EKS
         run: |
@@ -35,21 +33,11 @@ jobs:
             --region $AWS_REGION \
             --name $EKS_CLUSTER_NAME
 
-      - name: Derive ECR image tag from commit SHA
-        id: set-tag
-        run: |
-          SHORT_SHA=${GITHUB_SHA::7}
-          SAFE_REPO=$(echo "${GITHUB_REPOSITORY}" | tr '/' '-')
-          IMAGE_TAG="${SAFE_REPO}-${SHORT_SHA}"
-          ECR_REGISTRY=$(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.${AWS_REGION}.amazonaws.com
-          IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
-          echo "Final image: $IMAGE_URI"
-
       - name: Render Kubernetes manifest
         run: |
-          export IMAGE=$IMAGE_URI
+          export IMAGE_TAG=latest
+          export ECR_REGISTRY=$(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com
+          export FULL_IMAGE="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           envsubst < app/frontend-src/k8s/Deployment.yml > k8s-frontend-deploy.yml
 
       - name: Deploy to EKS
