--- a/.github/workflows/Frontend-app-cd.yml
+++ b/.github/workflows/Frontend-app-cd.yml
@@ -12,7 +12,7 @@ env:
   AWS_REGION: ap-south-1
   AWS_DEFAULT_REGION: ap-south-1
   ECR_REPOSITORY: ecommerce-frontend
-  EKS_CLUSTER_NAME: ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
+  SONAR_PROJECT_KEY: chandrakatore2004_aws-eks-3tier-devops-demo
 
 jobs:
   deploy-to-eks:
@@ -33,24 +33,26 @@ jobs:
         run: |
           aws eks update-kubeconfig \
             --region $AWS_REGION \
-            --name $EKS_CLUSTER_NAME
+            --name ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
 
-      - name: Derive ECR image tag from commit SHA
-        id: set-tag
+      - name: Set image tag variables
         run: |
           SHORT_SHA=${GITHUB_SHA::7}
           SAFE_REPO=$(echo "${GITHUB_REPOSITORY}" | tr '/' '-')
           IMAGE_TAG="${SAFE_REPO}-${SHORT_SHA}"
-          ECR_REGISTRY=$(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.${AWS_REGION}.amazonaws.com
-          IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
-          echo "Final image: $IMAGE_URI"
 
-      - name: Render Kubernetes manifest
+      - name: Render Kubernetes manifest with correct image
         run: |
-          export IMAGE=$IMAGE_URI
-          envsubst < app/frontend-src/k8s/Deployment.yml > k8s-frontend-deploy.yml
+          ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
+          ECR_REGISTRY="$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com"
+          FULL_IMAGE="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          export FULL_IMAGE
+          echo "Using image: $FULL_IMAGE"
+          envsubst '${FULL_IMAGE}' < app/frontend-src/k8s/Deployment.yml > k8s-frontend-deploy.yml
+
+      - name: Print rendered manifest (debug)
+        run: cat k8s-frontend-deploy.yml
 
       - name: Deploy to EKS
         run: kubectl apply -f k8s-frontend-deploy.yml
