--- a/.github/workflows/terraform-tfsec.yml
+++ b/.github/workflows/terraform-tfsec.yml
@@ -9,43 +9,54 @@ on:
 
 jobs:
   tfsec:
-    name: Run tfsec on Terraform Code
+    name: Run tfsec and export HTML report
     runs-on: [self-hosted, linux, qa]
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install sarif-tools (Python CLI)
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y python3-venv
-          python3 -m venv venv
-          ./venv/bin/pip install --no-cache-dir sarif-tools
+          sudo apt-get install -y jq python3 python3-pip
+          pip3 install jinja2
 
-      - name: Run tfsec scan (Plain Text)
+      - name: Run tfsec (JSON Output)
         run: |
-          echo "🔍 Scanning Terraform code in branch: ${{ github.ref_name }}"
+          mkdir -p terraform/tfsec-report
           cd terraform
-          tfsec . --tfvars-file=dev.tfvars > tfsec-report.txt || true
+          tfsec --format json --out tfsec-report.json || true
 
-      - name: Upload tfsec Text Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: tfsec-text-report-${{ github.ref_name }}
-          path: terraform/tfsec-report.txt
-
-      - name: Run tfsec scan (SARIF Format)
+      - name: Convert JSON to HTML (simple script)
         run: |
-          cd terraform
-          tfsec --format sarif --out tfsec-results.sarif || true
+          cat > terraform/json_to_html.py <<EOF
+          import json
+          from jinja2 import Template
 
-      - name: Convert SARIF to HTML
-        run: |
-          ./venv/bin/sarif-to-html terraform/tfsec-results.sarif --output terraform/tfsec-report/index.html
+          with open("terraform/tfsec-report.json") as f:
+              data = json.load(f)
 
-      - name: Upload tfsec HTML Report
+          tmpl = Template(\"""
+          <html><head><title>tfsec Report</title></head><body>
+          <h1>tfsec Report - {{ results|length }} issues</h1>
+          <ul>
+          {% for item in results %}
+            <li><strong>{{ item['rule_id'] }}</strong>: {{ item['description'] }}
+              <br><code>{{ item['location']['filename'] }}:{{ item['location']['start_line'] }}</code>
+            </li>
+          {% endfor %}
+          </ul></body></html>
+          \""")
+
+          with open("terraform/tfsec-report/index.html", "w") as f:
+              f.write(tmpl.render(results=data["results"]))
+          EOF
+
+          python3 terraform/json_to_html.py
+
+      - name: Upload HTML report
         uses: actions/upload-artifact@v4
         with:
           name: tfsec-html-report-${{ github.ref_name }}
-          path: terraform/tfsec-report/
+          path: terraform/tfsec-report/index.html
