Actions workflow summary panel

--- a/.github/workflows/terraform-tfsec.yml
+++ b/.github/workflows/terraform-tfsec.yml
@@ -2,7 +2,9 @@ name: Terraform Security Scan (tfsec)
 
 on:
   push:
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
     paths:
       - 'terraform/**'
   workflow_dispatch:
@@ -14,17 +16,21 @@ jobs:
 
     defaults:
       run:
-        working-directory: terraform  # ✅ Set working directory for all run steps
+        working-directory: terraform # All run steps run in terraform/
 
     steps:
       - name: 🛎️ Checkout Code
         uses: actions/checkout@v4
 
       - name: 🔍 Run tfsec Scan
+        id: tfsec
         run: |
+          set -e
           echo "Scanning Terraform code in branch: ${{ github.ref_name }}"
-          tfsec . --tfvars-file=dev.tfvars > tfsec-report.txt || true
+          tfsec . --tfvars-file=dev.tfvars > tfsec-report.txt || true # Don't fail on findings
+
       - name: 🧪 Convert Report to HTML
+        id: html
         run: |
           {
             echo "<!DOCTYPE html><html><head><meta charset='UTF-8'><title>tfsec Report</title>"
@@ -33,8 +39,17 @@ jobs:
             cat tfsec-report.txt
             echo "</pre></body></html>"
           } > tfsec-report.html
+
       - name: 🗂️ Upload HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: tfsec-report-html-${{ github.ref_name }}
-          path: terraform/tfsec-report.html
+          path: tfsec-report.html # No need for 'terraform/' prefix due to working-directory
+
+      - name: ✍️ Add tfsec Summary to Actions UI
+        run: |
+          echo "## Terraform Security Scan Summary" >> $GITHUB_STEP_SUMMARY
+          echo "**Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "- [Download HTML tfsec report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "See the attached artifact for the complete report." >> $GITHUB_STEP_SUMMARY
